--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: diffPrivML
-Title: What the Package Does (one line, title case)
+Title: Library of machine learning workflow enhanced with differential privacy
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: c(
+    person("Terence", "Tam", email = "terencet@stanford.edu", role = c("aut", "cre")),
+    person("Eva", "Gong", email = "first.last@example.com", role = c("aut")))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.3)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
