--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,6 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Imports: dplyr, caret
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
