--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: dplyr, caret
+Imports: R6, caret
 Suggests: knitr,
     rmarkdown
 VignetteBuilder: knitr
