--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Eva", "Gong", email = "first.last@example.com", role = c("aut")))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.3)
-License: What license is it under?
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
