move laplace to its own noise util file. also add sample summary() function to naive bayes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,9 @@ Suggests: knitr,
     rmarkdown,
     testthat
 VignetteBuilder: knitr
+Collate: 
+    'noiseFunctions.R'
+    'DPNaiveBayesClassifier.R'
+    'DPRandomDecisionTreeClassifier.R'
+    'datasets.R'
+    'diffPrivML.R'
