added summary functions for naive bayes and RDT, needed to use if for report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(predict,DPLogisticRegressionClassifier)
 S3method(predict,DPNaiveBayesClassifier)
 S3method(predict,DPRandomDecisionTreeClassifier)
 S3method(summary,DPLogisticRegressionClassifier)
+S3method(summary,DPNaiveBayesClassifier)
 export(DPLogisticRegressionClassifier)
 export(DPNaiveBayesClassifier)
 export(DPRandomDecisionTreeClassifier)
