accidentally overwrote the naive bayes summary function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(predict,DPNaiveBayesClassifier)
 S3method(predict,DPRandomDecisionTreeClassifier)
 S3method(summary,DPLogisticRegressionClassifier)
 S3method(summary,DPNaiveBayesClassifier)
+S3method(summary,DPRandomDecisionTreeClassifier)
 export(DPLogisticRegressionClassifier)
 export(DPNaiveBayesClassifier)
 export(DPRandomDecisionTreeClassifier)
