--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: diffPrivML
-Title: Library of machine learning workflow enhanced with differential privacy
-Version: 1.0.0.000
+Title: Differential Private Machine Learning
+Version: 0.0.0.900
 Authors@R: c(
     person("Terence", "Tam", email = "terencet@stanford.edu", role = c("aut", "cre")),
     person("Yifan", "Gong", email = "yifan.gong717@gmail.com", role = c("aut")))
-Description: diffPrivML aims to put these differential private enhanced ML algorithms in the hands of data practitioners. End users do not need to worry about *HOW* to perturb the data to release their models; the ML algorithm itself makes the guarantee.
+Description: A machine learning library that aims to put differential private 
+    enhanced ML algorithms in the hands of data practitioners. End users do not 
+    need to worry about *HOW* to perturb the data to release their models; the ML 
+    algorithm itself makes the guarantee.
 Depends: R (>= 3.4.3)
-License: file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
